apps/dev/docker-desktop/dev.connme.ru/ingress/adminer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
  name: adminer-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: dev.connme.ru
    http:
      paths:
      - pathType: Prefix
        path: "/adminer123"
        backend:
          service:
            name: adminer-service
            port:
              number: 8080
